added pencil icons to all Edit buttons

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -139,7 +139,7 @@ id: edit answers screen
 question: |
   Edit your answers
 subquestion: |
-  ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit answers', color='info') }
+  ${ action_button_html(url_action('review_VT_fee_waiver'), label='<i class="fa-solid fa-pencil"></i> Edit your answers', color='info') }
   
   Remember to come back to this screen to continue.
 continue button field: VT_fee_waiver_preview_question
@@ -1970,9 +1970,9 @@ subquestion: |
 
   Click the image to view it in a new tab. **Remember to come back to this screen to edit the form and/or finish the form.**
   
-  Click the "Edit your answers" button to edit your answers.
+  Click the "Edit your answers" button to make changes.
 
-  ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit your answers', color='info') }
+  ${ action_button_html(url_action('review_VT_fee_waiver'), label='<i class="fa-solid fa-pencil"></i> Edit your answers', color='info') }
 
   **Tap Next to choose how to sign your form.**
   
@@ -2254,7 +2254,7 @@ subquestion: |
   
   ${ download_screen_instructions_one_form }
 
-  ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit your answers', color='info') }
+  ${ action_button_html(url_action('review_VT_fee_waiver'), label='<i class="fa-solid fa-pencil"></i> Edit your answers', color='info') }
 
   <hr>
   
