--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1179,7 +1179,7 @@ fields:
       If there's an existing court case, choose the court that the case is in. Look at the papers from the court.
  
   - Court Division: trial_court_division
-    code: sorted(all_courts.unique_column_values('division_abbr') - {"Unknown"})
+    code: sorted(all_courts.unique_column_values('division_abbr'))
     hide if: do_not_know_court_division
   
   - note: |
@@ -1195,7 +1195,11 @@ fields:
       - I don't know what division to choose.
   - note: |
       OK. We'll leave that blank on your form. You can fill it in later.
-    show if: do_not_know_court_division 
+    show if: do_not_know_court_division
+---
+code: |
+  if do_not_know_court_division == True:
+    trial_court_division == "Unknown"
 ---
 id: choose a court county
 question: |
