added  Edit: - trial_court_division AND trial_court.address.county; updated Next Steps doc

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -2020,6 +2020,7 @@ subquestion: |
 review:
   - Edit: 
     - trial_court_division
+    - trial_court.address.county
     - recompute:
       - trial_court_index
       - trial_court
